# fastapi-backend-template

./: .dockerignore  .env.example  .gitignore  .gitlint  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: pytest.yml
api/: router.py
api/routes/: user.py
config/: environment.py  manager.py
config/settings/: development.py  production.py  qa.py
db/: base.py  session.py
messages/: user.py
models/: user.py
repositories/: user.py
security/: auth.py  security.py
services/: user_service.py
src/api/: router.py
src/api/routes/: health.py  user.py
src/config/: __init__.py  logging.py  manager.py  settings_manager.py
src/config/settings/: base.py  development.py  production.py  qa.py
src/db/: session.py
src/messages/: error.py  user.py
src/models/: user.py
src/repositories/: user.py
src/schemas/: user.py
src/services/: user_service.py
tests/unit/: test_user.py
